# online_education_with_AI

./: .gitignore  README.md  db.sqlite3  pyproject.toml
edu/: admin.py  apps.py  backends.py  forms.py  models.py  urls.py  views.py
edu/migrations/: 0001_initial.py
edu/static/registration/: style.css
edu/templates/edu/: base.html  chat.html  course_detail.html  courses.html  index.html  lesson.html  profile.html  teacher.html
edu/templates/registration/: sign-in.html  sign-up.html
mysite/: settings.py  urls.py
static/edu/css/: style.css  templatemo-cyborg-gaming.css
static/edu/js/: custom.js  script.js
