[tool.poetry]
name = "online-education-with-ai"
version = "0.1.0"
description = ""
authors = ["Nurmash Omarbek <nurmash98@github.com>"]
readme = "README.md"
packages = [{include = "online_education_with_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openai = "^0.27.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
